[package]
name = "cargo-flaky"
version = "0.1.1"
authors = ["marin postma <postma.marin@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A cargo sub-command to helps you find flaky tests"
repository = "https://github.com/MarinPostma/cargo-flaky"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
cargo = "0.53.0"
chrono = "0.4.19"
once_cell = "1.7.2"
regex = "1.5.4"
structopt = "0.3.21"
subprocess = "0.2.7"
tempfile = "3.2.0"
