[package]
name = "cargo-flaky"
version = "0.4.0"
authors = ["marin postma <postma.marin@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A cargo sub-command to helps you find flaky tests"
repository = "https://github.com/meilisearch/cargo-flaky"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
ctrlc = "3.1.9"
indicatif = "0.16.2"
num_cpus = "1.13.0"
once_cell = "1.7.2"
regex = "1.5.4"
serde = "1.0.126"
serde_json = "1.0.64"
clap = { version = "4.5", features = ["derive"] }
subprocess = "0.2.7"
tempfile = "3.2.0"
