[package]
name = "cargo-flaky"
version = "0.4.0"
authors = ["marin postma <postma.marin@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A cargo sub-command to helps you find flaky tests"
repository = "https://github.com/meilisearch/cargo-flaky"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
ctrlc = "3.4.5"
indicatif = "0.16.2"
num_cpus = "1.16.0"
once_cell = "1.20.2"
regex = "1.11.1"
serde = "1.0.215"
serde_json = "1.0.133"
clap = { version = "4.5", features = ["derive"] }
subprocess = "0.2.9"
tempfile = "3.14.0"
